# syncopate

./: Cargo.toml  LICENSE  README.md
ai_plans/: ZOMBIE.md
assets/characters/ravissara/: ravissara_sprite.aseprite
assets/characters/thunwa/: thunwa_sprite.aseprite
assets/characters/zombie/: zombie_sprite.aseprite
src/: lib.rs  main.rs
src/camera/: mod.rs
src/characters/: mod.rs  ravissara.rs  thunwa.rs  zombie.rs
src/sounds/: condo_entering.rs  main_menu.rs  mod.rs
src/terrains/: condo.rs  condo_entering.rs  mod.rs
src/ui/: health_ui.rs  in_game_options_menu.rs  main_menu.rs  mod.rs  options.rs  paused_menu.rs
