[package]
name = "syncopate"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
bevy_ecs_tilemap = "0.16.0"
bevy-inspector-egui = "0.31"
bevy_rapier2d = { version = "*", features = ["simd-stable", "debug-render-2d"] }
bevy_aseprite_ultra = "0.6.1"
bevy-fps-counter = "0.7.0"
bevy_light_2d = "0.6"
pathfinding = "4.14.0"
bevy_kira_audio = "0.23.0"
rand = "0.9.1"
